--- a/FlyingSaucer/flyingsaucer/build.gradle
+++ b/FlyingSaucer/flyingsaucer/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
 }
