--- a/FlyingSaucer/flyingsaucer/src/main/AndroidManifest.xml
+++ b/FlyingSaucer/flyingsaucer/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".BeerListActivity"
+            android:name=".store.StoreBeersActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
