--- a/FlyingSaucer/build.gradle
+++ b/FlyingSaucer/build.gradle
@@ -8,11 +8,16 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:1.3.0'
         classpath 'com.zeroturnaround.jrebel.android:jr-android-gradle:0.8.+'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4' // Dagger: source code generation
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+
+    configurations {
+        apt
     }
 }
 
