--- a/FlyingSaucer/flyingsaucer/build.gradle
+++ b/FlyingSaucer/flyingsaucer/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.zeroturnaround.jrebel.android'
+apply plugin: 'com.neenbedankt.android-apt' // Dagger: source code generation
 
 android {
     compileSdkVersion 22
@@ -28,4 +29,11 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
+
+    // Dagger 2
+    compile 'com.google.dagger:dagger:2.0.1' // Dagger library
+    apt 'com.google.dagger:dagger-compiler:2.0.1' // Source code generation
+    provided 'org.glassfish:javax.annotation:10.0-b28' // Resolve compilation errors
+
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
 }
