--- a/FlyingSaucer/flyingsaucer/build.gradle
+++ b/FlyingSaucer/flyingsaucer/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'com.zeroturnaround.jrebel.android'
 apply plugin: 'com.neenbedankt.android-apt' // Dagger: source code generation
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.0"
 
     defaultConfig {
         applicationId "com.dat.flyingsaucer"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0.0"
     }
@@ -23,17 +23,32 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:support-annotations:23.0.0'
+    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
 
     // Dagger 2
     compile 'com.google.dagger:dagger:2.0.1' // Dagger library
     apt 'com.google.dagger:dagger-compiler:2.0.1' // Source code generation
     provided 'org.glassfish:javax.annotation:10.0-b28' // Resolve compilation errors
 
-    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
+    /* TESTING */
+
+    // AssertJ
+    testCompile 'org.assertj:assertj-core:2.1.0'
+
+    // Robolectric
+    testCompile "org.robolectric:robolectric:3.0"
+
+    // Esspresso
+    // Force usage of support annotations in the test app, since it is internally used by the runner module.
+    androidTestCompile 'com.android.support:support-annotations:23.0.0'
+    androidTestCompile 'com.android.support.test:runner:0.3'
+    androidTestCompile 'com.android.support.test:rules:0.3'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
+
 }
